--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>BIET & SAUF</title>
+  <title>Biet & Sauf</title>
   <style>
     :root {
       --primary: #ff4081;
@@ -12,6 +12,7 @@
       --card: #2e2e3f;
       --text: #ffffff;
       --button-hover: #ff80ab;
+      --danger: #ff1744;
     }
 
     body {
@@ -56,6 +57,15 @@
       box-shadow: 0 0 10px var(--button-hover);
     }
 
+    .danger {
+      background-color: var(--danger);
+    }
+
+    .danger:hover {
+      background-color: #ff4569;
+      box-shadow: 0 0 10px var(--danger);
+    }
+
     input, select {
       background: #3c3c4f;
       color: white;
@@ -74,11 +84,16 @@
     .hidden { display: none; }
     .team { margin-top: 10px; font-weight: bold; }
     hr { margin: 20px 0; border-color: #444; }
+    #timerDisplay {
+      font-size: 18px;
+      margin: 10px 0;
+      color: #ffd54f;
+    }
   </style>
 </head>
 <body>
 
-<h2>BIET & SAUF</h2>
+<h2>Biet & Sauf</h2>
 
 <div id="setup" class="card">
   <label>Spielernamen eingeben (gerade Anzahl, min. 4):</label><br/>
@@ -100,6 +115,10 @@
   <div id="rolesArea"></div>
   <div id="winnerSelection" class="hidden"></div>
   <div id="answerEvaluation" class="hidden"></div>
+  <div id="timerDisplay"></div>
+  <div id="earlyStopContainer" class="hidden">
+    <button class="danger" onclick="stopTimerEarly()">⏹️ Timer stoppen (Ziel erreicht)</button>
+  </div>
 </div>
 
 <div id="endScreen" class="card hidden">
@@ -112,13 +131,15 @@ let players = [];
 let teams = [];
 let currentRound = 1;
 let maxRounds = 11;
-let categories = ["Fußballstadien", "Aktive Tennis-Profis", "Trinkspiele", "Kneipen/Bars in München", "Feiertage in Deutschland", "Eistee-Marken", "Wodkamarken", "Spezimarken", "Cola-Marken", "Tiere, die in einem Zoo zu finden sind", "Indisches Essen", "Berge auf der Welt", "Filme von Alfred Hitchcock", "Olympische Sportarten", "Französischsprachige Musiker", "Spanische Musiker", "Italienische Musiker", "Das Wort Hallo in anderen Sprachen", "Deutsche Fernsehsender", "Trash-TV Serien", "Biermarken", "Lieder, die das Wort Love im Titel haben", "Lieder, die das Wort Heart im Titel haben", "Lieder, die das Wort Night im Titel haben", "Fluggesellschaften", "Cocktails", "Weltwunder", "Lieder von Ed Sheeran", "Lieder von AC-DC", "Lieder von Dua Lipa", "Lieder von Katy Perry", "Lieder von Rihanna", "Lieder von Justin Bieber", "Lieder von Beyoncé", "Lieder von Queen", "Lieder, die das Wort Baby im Titel haben", "Reclam-Bücher", "Zeitungen in Deutschland", "Animeserien","Sportarten ohne Ball", "Politiker in Deutschland", "Versicherungskonzerne", "Länder, die weder den Euro noch Dollar haben", "Make-Up Produkte", "Länder in Asien", "Lieder von Madonna", "Apple-Produkte", "Lieder von Cro", "Lieder von Adele", "Lieder von Bushido", "Lieder von Helene Fischer", "Lieder von Culcha Candela", "Lieder von ABBA", "Lieder von Coldplay", "Clubs in München", "Münchner U-Bahn-Stationen der U4", "Münchner U-Bahn-Stationen der U5", "Charaktere aus Harry Potter", "Charaktere aus Die Simpsons", "Charaktere aus dem Mickey Maus Universum", "Charaktere aus Game of Thrones", "Charaktere aus Breaking Bad", "Charaktere aus Family Guy", "Charaktere aus Star Wars", "Flüsse in Deutschland", "Länder, die mit B beginnen", "Länder, die mit C beginnen", "Länder, die mit K beginnen", "Länder, die mit R beginnen", "Länder, die mit L beginnen", "US-Präsidenten", "Deutsche Bundeskanzler", "Städte in Afrika", "Städte in Niedersachsen", "Städte in Sachsen-Anhalt", "Städte in Sachsen", "Städte in Schleswig-Holstein", "Städte in Mecklenburg-Vorpommern", "Städte im Saarland", "Städte in Brandenburg", "Städte in Hessen", "Städte in Rheinland-Pfalz", "Gewinner eines Oscars", "Städte in Kroatien", "Städte in Schweden", "Städte in Norwegen", "Städte in Russland", "Städte in Portugal", "Städte in Griechenland", "Städte in der Türkei", "Länder, in denen bereits die Olympischen Spiele stattgefunden haben", "Automarken", "Formel 1 Fahrer", "Tiere ohne Fell", "Milliardäre auf der Welt", "Lieder von Taylor Swift", "Teams aus der NBA", "Teams aus der NFL", "Teams aus der NHL", "Glaubensrichtungen", "Luxus-Klamottenmarken", "Kaugummimarken", "Internet-Suchmaschinen", "Synonyme für Penis", "Synonyme für Vagina", "Synonyme für Geschlechtsverkehr", "Länder, in deren Flagge Rot ist", "Länder, in deren Flagge Blau ist", "Länder, in deren Flagge Gelb ist", "Länder, in deren Flagge Schwarz ist", "Länder, in deren Flagge Grün ist", "Länder, in deren Flagge Weiß ist", "Synonyme für Geld", "Filme, in denen Leonardo di Caprio mitgespielt hat", "Filme, in denen Elyas M'Barek mitgespielt hat", "Filme, in denen Margot Robbie mitgespielt hat", "Filme, in denen Jennifer Lawrence mitgespielt hat", "Supermärkte in Deutschland", "Synonyme für sprechen", "Schulen in München", "Politische Parteien in Deutschland", "Städte, in denen es einen Tatort gibt", "Ballermann-Lieder", "Ballermann-Musiker"];
+let categories = ["Fußballstadien", "Profis im Golf", "Milka-Produkte", "Studiengänge", "Ausbildungsberufe", "Sprichwörter", "Fußballvereine, die die Champions-League gewonnen haben", "Länder, die bereits FIFA-Weltmeister wurden", "Netflix-Originals", "Essen, das es beim Dönermann gibt", "McDonalds-Produkte", "Burger King Produkte", "Profis im Schach", "Aktive Tennis-Profis", "Trinkspiele", "Kneipen/Bars in München", "Feiertage in Deutschland", "Eistee-Marken", "Wodkamarken", "Spezimarken", "Cola-Marken", "Tiere, die in einem Zoo zu finden sind", "Indisches Essen", "Berge auf der Welt", "Filme von Alfred Hitchcock", "Olympische Sportarten", "Französischsprachige Musiker", "Spanische Musiker", "Italienische Musiker", "Das Wort Hallo in anderen Sprachen", "Deutsche Fernsehsender", "Trash-TV Serien", "Biermarken", "Lieder, die das Wort Love im Titel haben", "Lieder, die das Wort Heart im Titel haben", "Lieder, die das Wort Night im Titel haben", "Fluggesellschaften", "Cocktails", "Weltwunder", "Lieder von Ed Sheeran", "Lieder von AC-DC", "Lieder von Dua Lipa", "Lieder von Katy Perry", "Lieder von Rihanna", "Lieder von Justin Bieber", "Lieder von Beyoncé", "Lieder von Queen", "Lieder, die das Wort Baby im Titel haben", "Reclam-Bücher", "Zeitungen in Deutschland", "Animeserien","Sportarten ohne Ball", "Politiker in Deutschland", "Versicherungskonzerne", "Länder, die weder den Euro noch Dollar haben", "Make-Up Produkte", "Länder in Asien", "Lieder von Madonna", "Apple-Produkte", "Lieder von Cro", "Lieder von Adele", "Lieder von Bushido", "Lieder von Helene Fischer", "Lieder von Culcha Candela", "Lieder von ABBA", "Lieder von Coldplay", "Clubs in München", "Münchner U-Bahn-Stationen der U4", "Münchner U-Bahn-Stationen der U5", "Charaktere aus Harry Potter", "Charaktere aus Die Simpsons", "Charaktere aus dem Mickey Maus Universum", "Charaktere aus Game of Thrones", "Charaktere aus Breaking Bad", "Charaktere aus Family Guy", "Charaktere aus Star Wars", "Flüsse in Deutschland", "Länder, die mit B beginnen", "Länder, die mit C beginnen", "Länder, die mit K beginnen", "Länder, die mit R beginnen", "Länder, die mit L beginnen", "US-Präsidenten", "Deutsche Bundeskanzler", "Städte in Afrika", "Städte in Niedersachsen", "Städte in Sachsen-Anhalt", "Städte in Sachsen", "Städte in Schleswig-Holstein", "Städte in Mecklenburg-Vorpommern", "Städte im Saarland", "Städte in Brandenburg", "Städte in Hessen", "Städte in Rheinland-Pfalz", "Gewinner eines Oscars", "Städte in Kroatien", "Städte in Schweden", "Städte in Norwegen", "Städte in Russland", "Städte in Portugal", "Städte in Griechenland", "Städte in der Türkei", "Länder, in denen bereits die Olympischen Spiele stattgefunden haben", "Automarken", "Formel 1 Fahrer", "Tiere ohne Fell", "Milliardäre auf der Welt", "Lieder von Taylor Swift", "Teams aus der NBA", "Teams aus der NFL", "Teams aus der NHL", "Glaubensrichtungen", "Luxus-Klamottenmarken", "Kaugummimarken", "Internet-Suchmaschinen", "Synonyme für Penis", "Synonyme für Vagina", "Synonyme für Geschlechtsverkehr", "Länder, in deren Flagge Rot ist", "Länder, in deren Flagge Blau ist", "Länder, in deren Flagge Gelb ist", "Länder, in deren Flagge Schwarz ist", "Länder, in deren Flagge Grün ist", "Länder, in deren Flagge Weiß ist", "Synonyme für Geld", "Filme, in denen Leonardo di Caprio mitgespielt hat", "Filme, in denen Elyas M'Barek mitgespielt hat", "Filme, in denen Margot Robbie mitgespielt hat", "Filme, in denen Jennifer Lawrence mitgespielt hat", "Supermärkte in Deutschland", "Synonyme für sprechen", "Schulen in München", "Politische Parteien in Deutschland", "Städte, in denen es einen Tatort gibt", "Ballermann-Lieder", "Ballermann-Musiker"];
 let roundCategory = "";
 let bidders = [];
 let answerers = [];
 let teamPoints = {};
 let biddingWinnerTeam = "";
 let bidAmount = 0;
+let timerInterval;
+let timerCount = 0;
 
 function addPlayer() {
   const div = document.createElement("div");
@@ -193,6 +214,9 @@ function startRound() {
   document.getElementById("categoryText").innerText = roundCategory;
   document.getElementById("winnerSelection").classList.add("hidden");
   document.getElementById("answerEvaluation").classList.add("hidden");
+  const timerDisplay = document.getElementById("timerDisplay");
+  if (timerDisplay) timerDisplay.innerText = "";
+  document.getElementById("earlyStopContainer").classList.add("hidden");
 
   bidders = [];
   answerers = [];
@@ -207,7 +231,7 @@ function startRound() {
   let rolesHTML = `<p><strong>Bieterfragen pro Team:</strong></p>`;
   teams.forEach((team, i) => {
     const bieter = bidders[i];
-    rolesHTML += `<p>Team ${i+1} (${team.join(" & ")}): Wie viele "${roundCategory}" kann ${bieter} nennen?</p>`;
+    rolesHTML += `<p>Team ${i+1} (${team.join(" & ")}): Wie viele \"${roundCategory}\" kann ${bieter} nennen?</p>`;
   });
 
   let biddingInstructions = `<hr><p><strong>${starter}</strong> beginnt mit dem Bieten.</p>
@@ -217,20 +241,49 @@ function startRound() {
     </select><br/>
     <label>Gebotene Anzahl:</label><br/>
     <input id="bidAmountInput" type="number" min="1"><br/>
-    <button onclick="confirmBiddingResult()">Bestätigen</button>`;
+    <button onclick="confirmBiddingResult()">Bestätigen & Timer starten</button>`;
 
   document.getElementById("rolesArea").innerHTML = rolesHTML + biddingInstructions;
 }
 
 function confirmBiddingResult() {
+  clearInterval(timerInterval);
   biddingWinnerTeam = document.getElementById("winningTeamSelect").value;
   bidAmount = parseInt(document.getElementById("bidAmountInput").value);
   if (!bidAmount || bidAmount <= 0) {
     alert("Bitte eine gültige Anzahl angeben.");
     return;
   }
+  startTimer();
+}
 
-  let html = `<p>Hat das Team <strong>${biddingWinnerTeam}</strong> das Gebot von <strong>${bidAmount}</strong> erfüllt?</p>`;
+function startTimer() {
+  timerCount = 0;
+  const display = document.getElementById("timerDisplay");
+  if (!display) return;
+  display.innerText = "⏳ Timer: 0s";
+  document.getElementById("earlyStopContainer").classList.remove("hidden");
+  timerInterval = setInterval(() => {
+    timerCount++;
+    if (!display) return;
+    display.innerText = `⏳ Timer: ${timerCount}s`;
+    if (timerCount >= 60) {
+      clearInterval(timerInterval);
+      display.innerText += " – ⏱ Zeit ist um!";
+      document.getElementById("earlyStopContainer").classList.add("hidden");
+      showAnswerConfirmation();
+    }
+  }, 1000);
+}
+
+function stopTimerEarly() {
+  clearInterval(timerInterval);
+  document.getElementById("earlyStopContainer").classList.add("hidden");
+  showAnswerConfirmation();
+}
+
+function showAnswerConfirmation() {
+  let html = `<p>Hat das Team <strong>${biddingWinnerTeam}</strong> die ${bidAmount} Begriffe in 60 Sekunden geschafft?</p>`;
   html += `<button onclick="resolveAnswer(true)">✅ Ja</button>
            <button onclick="resolveAnswer(false)">❌ Nein</button>`;
   document.getElementById("winnerSelection").classList.remove("hidden");
@@ -240,17 +293,17 @@ function confirmBiddingResult() {
 function resolveAnswer(success) {
   document.getElementById("answerEvaluation").classList.remove("hidden");
   if (success) {
-    teamPoints[biddingWinnerTeam] += bidAmount;
-    document.getElementById("answerEvaluation").innerHTML = `<p>${biddingWinnerTeam} bekommt ${bidAmount} Punkte und darf diese Schlücke verteilen.</p>`;
+    teamPoints[biddingWinnerTeam] += 3;
+    document.getElementById("answerEvaluation").innerHTML = `<p>${biddingWinnerTeam} bekommt <strong>3 Punkte</strong> und darf <strong>${bidAmount} Schlücke</strong> verteilen.</p>`;
   } else {
-    document.getElementById("answerEvaluation").innerHTML = `<p>${biddingWinnerTeam} hat es nicht geschafft. Der Bieter trinkt 3 Strafschlücke.</p>`;
+    document.getElementById("answerEvaluation").innerHTML = `<p>${biddingWinnerTeam} hat es nicht geschafft. <strong>${bidAmount} Schlücke</strong> müssen selbst getrunken werden + 3 Strafschlücke für den Bieter!</p>`;
   }
 
   currentRound++;
   if (currentRound > maxRounds) {
     setTimeout(showEndScreen, 1500);
   } else {
-    setTimeout(startRound, 2000);
+    setTimeout(startRound, 2500);
   }
 }
 
